--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Вход в интернет-банк</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style_main.css">
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
 </head>
 
@@ -39,7 +39,7 @@
           <app-header _ngcontent-c2="" _nghost-c3="">
             <div _ngcontent-c3="" class="header">
               <div _ngcontent-c3="" class="header__container"><a _ngcontent-c3="" class="header__logo"
-                  href="https://tochka.com"><img _ngcontent-c3="" class="header__logo--desktop"
+                  href="#"><img _ngcontent-c3="" class="header__logo--desktop"
                     src="./assets/svg/logo.svg"><img _ngcontent-c3="" class="header__logo--mobile"
                     src="./assets/svg/logo_single.svg"></a>
                 <div _ngcontent-c3="" class="header__call">
