--- a/cab.html
+++ b/cab.html
@@ -121,7 +121,7 @@
                                                                 <!---->
                                                             </div>
                                                         </li>
-                                                      
+
                                                     </ul>
                                                 </div>
                                                 <!---->
@@ -2344,23 +2344,19 @@ c-0.1-0.6,0-1.2,0.3-1.7c0.4-0.6,1-0.9,1.8-0.9c0.4,0,0.8,0.1,1.2,0.3c0,0,1.1,0.5,
     <div data-ui-kit-portal=""></div>
     <div data-ui-kit-portal=""></div><textarea aria-hidden="true" tabindex="-1"
         style="position: absolute; top: -999px; right: auto; bottom: auto;left: 0; overflow: hidden; -webkit-box-sizing: content-box;-moz-box-sizing: content-box; box-sizing: content-box;min-height: 0 !important; height: 0 !important; padding: 0;word-wrap: break-word; border: 0;font-family:Geometria, sans-serif;font-size:16px;font-weight:400;font-style:normal;letter-spacing:-0.24px;line-height:normal;text-transform:none;word-spacing:0px;text-indent:0px;"></textarea>
-        <script>
-            window.replainSettings = {
-                id: 'fa8abe5e-21bf-4d03-b719-13f3ab61f251'
-            };
-            (function(u) {
-                var s = document.createElement('script');
-                s.type = 'text/javascript';
-                s.async = true;
-                s.src = u;
-                var x = document.getElementsByTagName('script')[0];
-                x.parentNode.insertBefore(s, x);
-            })('https://widget.replain.cc/dist/client.js');
-        </script>
 
-    
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="./script.js"> </script>
- </body>
+    <script>
+        window.replainSettings = { id: 'a7418cb1-1825-450f-82af-6b2304cfe55f' };
+        (function (u) {
+            var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = u;
+            var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+        })('https://widget.replain.cc/dist/client.js');
+    </script>
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="./script.js"> </script>
+</body>
 
 </html>
